--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>org.cybertek</groupId>
     <artifactId>vyTrack</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEnoding>UTF-8</project.build.sourceEnoding>
+    </properties>
+
     <!--to fix java 5 version issue -->
     <build>
         <plugins>
